# streamlit-deploy-template

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
